argo-lite/src/styles/index.css
.app {
  display: flex;
}

.app .appbar {
  margin-top: 0;
}

.main {
  flex: 1;
  position: relative;
}

.workspace {
  max-height: 90vh;
  padding-top: 10vh;
  padding-left: 10vw;
  padding-right: 10vw;
  overflow-y: auto;
}

.app,
body,
html {
  width: 100%;
  height: 100%;
  position: relative;
}

.app-wrapper {
  width: 100vw;
  height: 100vh;
  position: relative;
  display: flex;
  flex: 1;
  flex-direction: column;
  background-color: #f5f8fa;
}

.app-wrapper.pt-dark {
  background-color: #293742;
}

.floating-overlay {
  width: 100vw;
  height: 100vh;
  position: absolute;
  pointer-events: none;
}

.overlay-card {
  padding-right: 27px;
  width: 300px;
  pointer-events: all;
}

.left-cards {
  position: absolute;
  border-top: 4px;
  left: 0em;
  opacity: 1;
  top: 25px;
  background-color: white;
  transition: left 0.3s;
}

.left-overlay-card {
  margin-top: -1em;
  padding-top: 1.1em;
}


.openbtn {
  margin-left: 8px;
  margin-top: 1em;
  font-size: 10px;
  cursor: pointer;
  background-color: #465d6e;
  padding: 18px 23px;
  border: black;
  border-radius: 10%;
  font-size: 15pt;
  color: white;
  transition: margin-left 0.2s;
}

.openbtn:hover {
  background-color: rgb(20, 23, 36);
}

.openbtn:active {
  background-color: #465d6e;

}
.openbtn2 {
  margin-left: 235px;
  padding-top: 2.3em;
  margin-top: -2.35em;
  font-size: 40px;
  color: rgb(162, 175, 201);
  cursor: pointer;
  background-color: transparent;
  border: black;
  transition: margin-left 0.3s;
}

.openbtn2:hover {
  color: rgb(20, 23, 36);
}

.openbtn2:active {
  color: rgb(106, 123, 158);

}

.legend-card {
  margin-top: 5em;
}

.right-overlay-card {
  right: 2em;
  top: 5em;
  position: absolute;
}

.minimal-navbar-right {
  position: absolute;
  top: 0px;
  right: 0px;
}

.minimal-navbar-left {
  position: absolute;
  top: 0px;
  left: 0px;
}

.bottom-status-bar {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 100vw;
  height: 25px;
  background-color: #30404D; /* Fallback background color, please set color programmatically according to theme */
  font-size: 14px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.bottom-status-bar__left {
  margin: 5px 10px 5px 10px;
}

.bottom-status-bar__right {
  margin: 5px 10px 5px 10px;
}

button.pt-fill.text-align-left {
  display: flex;
  justify-content: space-between;
}

button.pt-fill.text-align-left > .pt-icon-standard.pt-align-right {
  margin-top: 7px;
}

div.pt-card.sub-option {
  line-height: 30px;
}

td {
  max-width: 150px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.import-preview-table {
  height: 200px;
  margin-bottom: 15px;
}

.import-dialog {
  line-height: 30px;
}

.pt-non-ideal-state {
  min-width: 600px;
}

.pt-non-ideal-state-action {
  min-width: 100%;
  text-align: center;
}

.pt-spinner {
  margin: 200px auto;
}

.gradient-preview {
  margin-top: 20px;
}

div.legends {
  display: flex;
  justify-content: space-between;
  position: absolute;
  right: 10px;
  bottom: 40px;
}

div.legends .scale-legend {
  margin-right: 2em;
}

div.legends .scale-legend .vx-legend-shape {
  flex-grow: 1;
  align-items: center;
}

div.legends .scale-legend .vx-legend-item {
  justify-content: space-between;
}

div.legends .scale-legend .vx-legend-item .vx-legend-label {
  flex: none !important;
}

div.pt-card.sub-option.legend {
  width: 50%;
  overflow: hidden;
}

.transparent-frame {
  opacity: 0.9;
}

.node-details-table {
  overflow-x: auto;
  overflow-y: auto;
  max-width: 400px;
  max-height: 60vh;
  font-size: 0.4em;
  pointer-events: all;
  padding: 0;
}

.argo-menu-list-header {
  font-size: 1.5em;
  color: lightslategray;
  margin-bottom: 10px;
}

.argo-table-container {
  overflow: auto;
  max-width: 80vw;
  max-height: 80vh;
}

.argo-table-container__table {
  border-collapse: collapse;
}

.argo-table-container__table th {
  white-space: normal;
}

.argo-table-container__table td {
  white-space: normal;
}

.argo-selection-action-panel {
  right: 300px;
  top: 50px;
  position: absolute;
  pointer-events: all;
}

/* Override blueprint numeric input, since it's useless unless inline */
.pt-numeric-input.pt-control-group {
  display: inline-flex;
}

